<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diagnoseMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.DiagnosticsFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_diagnostics"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--this is the diagnose menu layout-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@id/textView5">

        <LinearLayout
            android:id="@+id/diagnoseMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DiagnosisTypeLabel"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_diagnose_motor_name" />

                <Spinner
                    android:id="@+id/pidOptionValues"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:prompt="@string/prompt_select_one"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/testTypeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_test_type" />

                <Spinner
                    android:id="@+id/testType"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:prompt="@string/prompt_select_one"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/maxMotive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_diagnose_motor_maxRPM"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/maxMotorRpmText"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:visibility="visible" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="?android:attr/listDivider"
                android:paddingTop="0dp" />

            <LinearLayout
                android:id="@+id/MotorSetup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/targetRPM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/label_diagnose_target_rpm_percent" />

                    <machine.microspin.com.drawframe_console.EditTextCustom
                        android:id="@+id/targetRpmPercent"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rpmTargetText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/label_diagnose_target_rpm" />

                    <TextView
                        android:id="@+id/targetRPMout"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="0"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signalLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/label_diagnose_ip_signal" />

                    <EditText
                        android:id="@+id/signalValue"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/testRunTimeValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/label_diagnose_run_time" />

                    <EditText
                        android:id="@+id/testRunTime"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/runDiagnose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/capsule_btn_green"
                android:text="@string/btn_diagnose_run"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

    <!--this is the diagnose live screen layout-->

    <LinearLayout
        android:id="@+id/diagnoseLive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/MotorCodeBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/motor_SA_Label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="0"
                android:text="@string/label_diagnose_motor_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/motorCodeLive"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TestTypeBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeOfTestLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="0"
                android:text="@string/label_test_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/typeOfTestLive"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TargetRPMBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:id="@+id/targetLabelLive"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/targetTextLive"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/param1LiveBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/param1Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="@string/label_diagnose_ip_signal"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_box_rect_black_thin">

                <TextView
                    android:id="@+id/signalVoltgaeLive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/param2LiveBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/param2Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="@string/label_diagnose_live_rpm"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_box_rect_black_thin">

                <TextView
                    android:id="@+id/actualRPMLive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/btn_diagnose_stop" />


    </LinearLayout>

</RelativeLayout>
